--- a/global.css
+++ b/global.css
@@ -26,10 +26,13 @@ html, body {
     border-radius: 8px; /* Optional: rounded corners */
   }
 
-  #map svg {
+  #circles {
     position: absolute;
     z-index: 1;
     width: 100%;
     height: 100%;
     pointer-events: none;
+    circle {
+      pointer-events: auto;
+    }
   }
