--- a/global.css
+++ b/global.css
@@ -34,8 +34,17 @@ html, body {
     pointer-events: none;
     circle {
       pointer-events: auto;
+      --color-departures: steelblue;
+      --color-arrivals: darkorange;
+      --color: color-mix(
+        in oklch,
+        var(--color-departures) calc(100% * var(--departure-ratio)),
+        var(--color-arrivals)
+      );
+      fill: var(--color);
     }
   }
+  
 
 /* header {
   display: flex;
