--- a/global.css
+++ b/global.css
@@ -9,25 +9,6 @@ body {
   padding: 1em;
 }
 
-#circles {
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  circle {
-    pointer-events: auto;
-    --color-departures: steelblue;
-    --color-arrivals: darkorange;
-    --color: color-mix(
-      in oklch,
-      var(--color-departures) calc(100% * var(--departure-ratio)),
-      var(--color-arrivals)
-    );
-    fill: var(--color);
-  }
-}
-
 header {
   display: flex;
   justify-content: space-between;
@@ -64,6 +45,33 @@ h1 {
 
 #selected-time {
   font-weight: bold;
+}
+
+.legend {
+  width: 100%;
+  display: flex;
+  margin-block: 1em;
+  gap: 1px;
+  margin-bottom: 2em;
+  div {
+    flex: 1;
+  }
+}
+
+.legend > div {
+  flex: 1; /* Equal space for each legend item */
+  padding: 0.5em 2em; /* More horizontal padding for balance */
+  text-align: center; /* Center-align text */
+  font-weight: bold;
+  color: white; /* Ensuring sufficient contrast */
+  --color-departures: steelblue;
+  --color-arrivals: darkorange;
+  --color: color-mix(
+    in oklch,
+    var(--color-departures) calc(100% * var(--departure-ratio)),
+    var(--color-arrivals)
+  );
+  background-color: var(--color);
 }
 
 
